# nekoray

./: .gitignore  CMakeLists.txt  README.md  nekoray_version.txt
.github/ISSUE_TEMPLATE/: bug-report-en.md
.github/workflows/: build-qv2ray-cmake.yml
cmake/: QHotkey.cmake  myproto.cmake
cmake/linux/: linux.cmake
cmake/macos/: macos.cmake
cmake/windows/: windows.cmake
core/cmd/nekobox_core/: core_box.go  go.mod  go.sum  grpc_box.go  grpc_windows.go  main.go  test_utils.go
core/cmd/nekobox_core/internal/boxapi/: clash_server.go  go_http.go  go_net.go
core/cmd/nekobox_core/internal/boxbox/: box.go  version.go
core/cmd/nekobox_core/internal/boxmain/: cmd_geoip.go  cmd_geosite_export.go
core/cmd/nekobox_core/internal/sys/: set_dns_darwin.go  set_dns_stub.go
core/cmd/nekobox_core/server/: grpc.go  update.go
core/cmd/updater/: go.mod  updater.go
core/grpc_server/: go.sum  grpc.go  update.go
db/: ConfigBuilder.cpp  ConfigBuilder.hpp  Database.cpp  Database.hpp  Group.hpp  ProxyEntity.hpp  RouteEntity.cpp  RouteEntity.h  RouteRuleEntity.h
db/traffic/: TrafficLooper.cpp  TrafficLooper.hpp
fmt/: AbstractBean.cpp  AbstractBean.hpp  Bean2CoreObj_box.cpp  Bean2External.cpp  Bean2Link.cpp  CustomBean.hpp  Link2Bean.cpp  Preset.hpp  QUICBean.hpp  SSHBean.h  ShadowSocksBean.hpp  TrojanVLESSBean.hpp  V2RayStreamSettings.hpp  VMessBean.hpp  WireguardBean.h  includes.h
go/cmd/nekobox_core/: core_box.go  go.mod  go.sum  grpc_box.go  grpc_windows.go  main.go  test_utils.go
go/cmd/nekobox_core/internal/: main.go
go/cmd/nekobox_core/internal/boxbox/: version.go
go/cmd/nekobox_core/internal/boxdns/: dns_manager_windows.go  monitor_windows.go  underlying_dns.go
go/cmd/nekobox_core/internal/boxmain/: cmd_check.go  cmd_geoip.go  cmd_geoip_export.go  cmd_geoip_list.go  cmd_geosite.go  cmd_geosite_export.go  cmd_geosite_list.go  cmd_rule_set_compile.go  cmd_run.go  (+1 more)
go/cmd/updater/: go.mod  go.sum  launcher_linux.go  main.go  updater.go
go/grpc_server/: go.mod  go.sum  grpc.go  update.go
include/api/: gRPC.h
include/configs/: ConfigBuilder.hpp
include/configs/proxy/: AbstractBean.hpp  ChainBean.hpp  CustomBean.hpp  NaiveBean.hpp  Preset.hpp  QUICBean.hpp  SSHBean.h  ShadowSocksBean.hpp  SocksHttpBean.hpp  TrojanVLESSBean.hpp  V2RayStreamSettings.hpp  VMessBean.hpp  WireguardBean.h  includes.h
include/configs/sub/: GroupUpdater.hpp
include/dataStore/: Database.hpp  Group.hpp  ProxyEntity.hpp  RouteEntity.h
include/global/: NekoGui_DataStore.hpp  NekoGui_Utils.hpp
include/stats/connections/: connectionLister.hpp
include/stats/traffic/: TrafficData.hpp
include/sys/: Process.hpp
include/sys/windows/: cursor.h
include/ui/: mainwindow.h  mainwindow.ui  mainwindow_interface.h
include/ui/group/: GroupItem.h  dialog_edit_group.h  dialog_edit_group.ui  dialog_manage_groups.h
include/ui/profile/: ProxyItem.h  ProxyItem.ui  dialog_edit_profile.h  dialog_edit_profile.ui  edit_chain.h  edit_custom.h  edit_naive.h  edit_naive.ui  edit_quic.h  edit_quic.ui  edit_shadowsocks.h  edit_shadowsocks.ui  edit_socks_http.h  edit_ssh.h  edit_ssh.ui  edit_trojan_vless.h  edit_trojan_vless.ui  edit_vmess.h  edit_vmess.ui  edit_wireguard.h  profile_editor.h
include/ui/setting/: RouteItem.h  dialog_basic_settings.h  dialog_basic_settings.ui  dialog_hotkey.h  dialog_hotkey.ui  dialog_manage_routes.h  dialog_manage_routes.ui  dialog_vpn_settings.h  dialog_vpn_settings.ui
libs/: build_deps_all.sh  build_go.sh  build_public_res.sh  deploy_linux64.sh  deploy_macos.sh  deploy_windows64.sh  pack_debian.sh  translate.sh
main/: Const.hpp  HTTPRequestHelper.cpp  HTTPRequestHelper.hpp  NekoGui.cpp  NekoGui.hpp  NekoGui_ConfigItem.hpp  NekoGui_DataStore.hpp  NekoGui_Utils.cpp  NekoGui_Utils.hpp  main.cpp
res/: MacOSXBundleInfo.plist  neko.qrc
res/translations/: fa_IR.ts  ru_RU.ts  zh_CN.ts
rpc/: gRPC.cpp  gRPC.h
script/: build_deps_all.sh  build_go.sh  build_public_res.sh  deploy_linux64.sh  deploy_macos.sh  deploy_windows64.sh  pack_debian.sh
src/: main.cpp
src/api/: gRPC.cpp
src/configs/: ConfigBuilder.cpp
src/configs/proxy/: AbstractBean.cpp  Bean2CoreObj_box.cpp  Bean2External.cpp  Bean2Link.cpp  Link2Bean.cpp
src/configs/sub/: GroupUpdater.cpp
src/dataStore/: Database.cpp  ProfileFilter.cpp  RouteEntity.cpp
src/global/: HTTPRequestHelper.cpp  NekoGui.cpp  NekoGui_Utils.cpp
src/stats/connectionLister/: connectionLister.cpp
src/stats/traffic/: TrafficLooper.cpp
src/sys/: AutoRun.cpp  ExternalProcess.cpp  Process.cpp
src/sys/linux/: LinuxCap.cpp
src/sys/macos/: MacOS.cpp
src/sys/windows/: MiniDump.cpp  cursor.cpp  guihelper.cpp
src/ui/: mainwindow.cpp  mainwindow_grpc.cpp
src/ui/group/: GroupItem.cpp  dialog_edit_group.cpp  dialog_manage_groups.cpp
src/ui/profile/: ProxyItem.cpp  dialog_edit_profile.cpp  edit_chain.cpp  edit_custom.cpp  edit_naive.cpp  edit_quic.cpp  edit_shadowsocks.cpp  edit_socks_http.cpp  edit_ssh.cpp  edit_trojan_vless.cpp  edit_vmess.cpp  edit_wireguard.cpp
src/ui/setting/: Icon.cpp  RouteItem.cpp  ThemeManager.cpp  dialog_basic_settings.cpp  dialog_hotkey.cpp  dialog_manage_routes.cpp  dialog_vpn_settings.cpp
sub/: GroupUpdater.cpp  GroupUpdater.hpp
sys/: AutoRun.cpp  ExternalProcess.cpp
sys/linux/: LinuxCap.cpp  LinuxCap.h
sys/macos/: MacOS.cpp  MacOS.h
translations/: fa_IR.ts  ru_RU.ts  zh_CN.ts
ui/: Icon.cpp  Icon.hpp  ThemeManager.cpp  ThemeManager.hpp  dialog_basic_settings.cpp  dialog_basic_settings.h  dialog_basic_settings.ui  dialog_first_setup.cpp  dialog_hotkey.cpp  dialog_manage_routes.cpp  dialog_manage_routes.h  dialog_manage_routes.ui  dialog_vpn_settings.cpp  dialog_vpn_settings.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_grpc.cpp
ui/edit/: dialog_edit_group.cpp  dialog_edit_group.h  dialog_edit_group.ui  dialog_edit_profile.cpp  dialog_edit_profile.ui  edit_quic.cpp  edit_quic.ui  edit_shadowsocks.ui  edit_ssh.cpp  edit_ssh.h  edit_trojan_vless.cpp  edit_wireguard.cpp  edit_wireguard.h  edit_wireguard.ui
ui/widget/: RouteItem.cpp  RouteItem.h  RouteItem.ui
(+1 files in other folders)
